# ur3e_w_perception

./: .gitmodules  README.md
get_pose_perception/: CMakeLists.txt  package.xml
get_pose_perception/launch/: get_pose_client.launch.py
get_pose_perception/rviz/: perception_rviz.rviz
get_pose_perception/src/: get_pose_client.cpp
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_and_place.launch.py  pick_and_place_v2.launch.py
moveit2_scripts/src/: pick_and_place.cpp  pick_and_place_v2.cpp
my_moveit2_config/: CMakeLists.txt  package.xml
my_moveit2_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur3e.srdf
my_moveit2_config/launch/: my_planning_execution.launch.py
start_bridge/: CMakeLists.txt  package.xml
start_bridge/launch/: start_bridge.launch.py
